Added key-resources to properties